# C-Basics

./: CMakeLists.txt  README.md
Hello/: CMakeLists.txt  Lesson 1.txt
Hello/src/: main.c
Hello_/: CMakeLists.txt  Lesson 2.txt
Hello_/src/: main.c
PswdProtHello/: CMakeLists.txt  Lesson 3.txt
PswdProtHello/src/: main.c
PswdProtHello2/: CMakeLists.txt  Lesson 4.txt
PswdProtHello2/src/: main.c
PswdProtHello3/: CMakeLists.txt  Lesson 5.txt
PswdProtHello3/src/: main.c
PswdProtHello4/: CMakeLists.txt  Lesson 6.txt
PswdProtHello4/data/: users.cfg
PswdProtHello4/src/: main.c
